// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChipBase Data element: 2 conditions 1`] = `
<div>
  <div
    class="chipBase"
  >
    <div
      class="leftIcon"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1a1 1 0 011 1v11a1 1 0 01-1 1H4a1 1 0 01-1-1V2a1 1 0 011-1zm-8 9v3h8v-3zm2 1v1H5v-1zm0-4v1H5V7zm6-5H4v3h8zM6 3v1H5V3zM4 9h8V6H4z"
          fill="currentColor"
        />
      </svg>
    </div>
    <span
      class="label"
    >
      <span
        class="primary"
      >
        My data element
      </span>
    </span>
    <span
      class="items"
      data-test="chip-items"
    >
      2
    </span>
  </div>
</div>
`;

exports[`ChipBase Data element: TRUE_ONLY 1 condition 1`] = `
<div>
  <div
    class="chipBase"
  >
    <div
      class="leftIcon"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1a1 1 0 011 1v11a1 1 0 01-1 1H4a1 1 0 01-1-1V2a1 1 0 011-1zm-8 9v3h8v-3zm2 1v1H5v-1zm0-4v1H5V7zm6-5H4v3h8zM6 3v1H5V3zM4 9h8V6H4z"
          fill="currentColor"
        />
      </svg>
    </div>
    <span
      class="label"
    >
      <span
        class="primary"
      >
        My data element
      </span>
    </span>
    <span
      class="items"
      data-test="chip-items"
    >
      1
    </span>
  </div>
</div>
`;

exports[`ChipBase Data element: TRUE_ONLY both selected 1`] = `
<div>
  <div
    class="chipBase"
  >
    <div
      class="leftIcon"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1a1 1 0 011 1v11a1 1 0 01-1 1H4a1 1 0 01-1-1V2a1 1 0 011-1zm-8 9v3h8v-3zm2 1v1H5v-1zm0-4v1H5V7zm6-5H4v3h8zM6 3v1H5V3zM4 9h8V6H4z"
          fill="currentColor"
        />
      </svg>
    </div>
    <span
      class="label"
    >
      <span
        class="primary"
      >
        My data element
      </span>
    </span>
    <span
      class="items"
      data-test="chip-items"
    >
      all
    </span>
  </div>
</div>
`;

exports[`ChipBase Data element: TRUE_ONLY no conditions 1`] = `
<div>
  <div
    class="chipBase"
  >
    <div
      class="leftIcon"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1a1 1 0 011 1v11a1 1 0 01-1 1H4a1 1 0 01-1-1V2a1 1 0 011-1zm-8 9v3h8v-3zm2 1v1H5v-1zm0-4v1H5V7zm6-5H4v3h8zM6 3v1H5V3zM4 9h8V6H4z"
          fill="currentColor"
        />
      </svg>
    </div>
    <span
      class="label"
    >
      <span
        class="primary"
      >
        My data element
      </span>
    </span>
    <span
      class="items"
      data-test="chip-items"
    >
      all
    </span>
  </div>
</div>
`;

exports[`ChipBase Data element: in stage with option set and 2 options chosen 1`] = `
<div>
  <div
    class="chipBase"
  >
    <div
      class="leftIcon"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1a1 1 0 011 1v11a1 1 0 01-1 1H4a1 1 0 01-1-1V2a1 1 0 011-1zm-8 9v3h8v-3zm2 1v1H5v-1zm0-4v1H5V7zm6-5H4v3h8zM6 3v1H5V3zM4 9h8V6H4z"
          fill="currentColor"
        />
      </svg>
    </div>
    <span
      class="label"
    >
      <span
        class="primary"
      >
        My data element
      </span>
    </span>
    <span
      class="items"
      data-test="chip-items"
    >
      2
    </span>
  </div>
</div>
`;

exports[`ChipBase Data element: no conditions 1`] = `
<div>
  <div
    class="chipBase"
  >
    <div
      class="leftIcon"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1a1 1 0 011 1v11a1 1 0 01-1 1H4a1 1 0 01-1-1V2a1 1 0 011-1zm-8 9v3h8v-3zm2 1v1H5v-1zm0-4v1H5V7zm6-5H4v3h8zM6 3v1H5V3zM4 9h8V6H4z"
          fill="currentColor"
        />
      </svg>
    </div>
    <span
      class="label"
    >
      <span
        class="primary"
      >
        My data element
      </span>
    </span>
    <span
      class="items"
      data-test="chip-items"
    >
      all
    </span>
  </div>
</div>
`;

exports[`ChipBase Data element: option set and 2 options chosen 1`] = `
<div>
  <div
    class="chipBase"
  >
    <div
      class="leftIcon"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1a1 1 0 011 1v11a1 1 0 01-1 1H4a1 1 0 01-1-1V2a1 1 0 011-1zm-8 9v3h8v-3zm2 1v1H5v-1zm0-4v1H5V7zm6-5H4v3h8zM6 3v1H5V3zM4 9h8V6H4z"
          fill="currentColor"
        />
      </svg>
    </div>
    <span
      class="label"
    >
      <span
        class="primary"
      >
        My data element
      </span>
    </span>
    <span
      class="items"
      data-test="chip-items"
    >
      2
    </span>
  </div>
</div>
`;

exports[`ChipBase OU: 2 selected 1`] = `
<div>
  <div
    class="chipBase"
  >
    <div
      class="leftIcon"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 1v4H4v2h6V6h4v4h-4V8H4v4h6v-1h4v4h-4v-2H3.5a.5.5 0 01-.492-.41L3 12.5V5H2V1zm7 11h-2v2h2zm0-5h-2v2h2zM5 2H3v2h2z"
          fill="currentColor"
        />
      </svg>
    </div>
    <span
      class="label"
    >
      <span
        class="primary"
      >
        Organsiation unit
      </span>
    </span>
    <span
      class="items"
      data-test="chip-items"
    >
      2
    </span>
  </div>
</div>
`;

exports[`ChipBase OU: none selected 1`] = `
<div>
  <div
    class="chipBase"
  >
    <div
      class="leftIcon"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 1v4H4v2h6V6h4v4h-4V8H4v4h6v-1h4v4h-4v-2H3.5a.5.5 0 01-.492-.41L3 12.5V5H2V1zm7 11h-2v2h2zm0-5h-2v2h2zM5 2H3v2h2z"
          fill="currentColor"
        />
      </svg>
    </div>
    <span
      class="label"
    >
      <span
        class="primary"
      >
        Organsiation unit
      </span>
    </span>
  </div>
</div>
`;

exports[`ChipBase Period: 1 selected 1`] = `
<div>
  <div
    class="chipBase"
  >
    <div
      class="leftIcon"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.5 2a.5.5 0 01.5.5V4h1a1 1 0 011 1v8a1 1 0 01-1 1H3a1 1 0 01-1-1V5a1 1 0 011-1h1V2.5a.5.5 0 011 0V4h6V2.5a.5.5 0 01.5-.5zM13 6H3v7h10zm-8 4a1 1 0 110 2 1 1 0 010-2zm3 0a1 1 0 110 2 1 1 0 010-2zM5 7a1 1 0 110 2 1 1 0 010-2zm3 0a1 1 0 110 2 1 1 0 010-2zm3 0a1 1 0 110 2 1 1 0 010-2z"
          fill="currentColor"
        />
      </svg>
    </div>
    <span
      class="label"
    >
      <span
        class="primary"
      >
        Event date (e2e)
      </span>
    </span>
    <span
      class="items"
      data-test="chip-items"
    >
      1
    </span>
  </div>
</div>
`;

exports[`ChipBase Period: none selected 1`] = `
<div>
  <div
    class="chipBase"
  >
    <div
      class="leftIcon"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.5 2a.5.5 0 01.5.5V4h1a1 1 0 011 1v8a1 1 0 01-1 1H3a1 1 0 01-1-1V5a1 1 0 011-1h1V2.5a.5.5 0 011 0V4h6V2.5a.5.5 0 01.5-.5zM13 6H3v7h10zm-8 4a1 1 0 110 2 1 1 0 010-2zm3 0a1 1 0 110 2 1 1 0 010-2zM5 7a1 1 0 110 2 1 1 0 010-2zm3 0a1 1 0 110 2 1 1 0 010-2zm3 0a1 1 0 110 2 1 1 0 010-2z"
          fill="currentColor"
        />
      </svg>
    </div>
    <span
      class="label"
    >
      <span
        class="primary"
      >
        Event date (e2e)
      </span>
    </span>
  </div>
</div>
`;
